ignore default config and fix func error when build in Java 1.8